# adventofcode

./: .gitignore
2015/: Cargo.toml
2015/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  lib.rs  main.rs
2016/: Cargo.toml
2019/: Cargo.toml  intcode.jl  test.py
2019/Day01/: fuel  fuel.jl  fuel.rs  fuel_fuel.py  module_fuel.py  test.py
2019/Day02/: day02.jl  intcode  intcode.py  intcode.rs  test.py
2019/Day03/: crossings.py  day03.jl
2019/Day04/: day04.jl  passwords.py
2019/Day05/: day05.jl  intcode.py  test.py
2019/Day06/: day06.jl  orbits.py
2019/Day07/: intcode.py  test.py
2019/Day08/: images.py
2019/Day09/: intcode  intcode.rs
2019/src/: intcode.rs
2020/: Cargo.toml
2020/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  main.rs
2021/: .gitignore
2021/day01/src/: main.rs
2021/day02/src/: main.rs
2021/day03/src/: main.rs
2021/day04/src/: main.rs
2021/day05/src/: main.rs
2021/day06/src/: main.rs
2021/day07/src/: main.rs
2021/day08/src/: main.rs
2021/day09/src/: main.rs
2021/day10/src/: main.rs
2021/day11/src/: main.rs
2022/: Cargo.toml
2022/src/: lib.rs  sets.rs
