[package]
name = "adventofcode-2016"
version = "0.1.0"
edition = "2021"
authors = ["Mihir Gadgil <mmgadgil20@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = { version = "0.1.1", features = ["alloc"] }
md-5 = "0.10.4"
regex = "1.6.0"
thiserror = "1.0.35"
