[package]
name = "adventofcode2019"
version = "0.1.0"
authors = ["Mihir Gadgil <16473290+scimas@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
thiserror = "1.0.30"
anyhow = "1.0.56"
