[package]
name = "adventofcode-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
rayon = "1.7.0"
regex = "1.7.0"
# https://github.com/serde-rs/serde/issues/2538
serde = { version = ">= 1.0, <= 1.0.171", features = ["derive"] }
serde_json = "1.0.90"
thiserror = "1.0.37"
